SujetTableur/_build/parser.output
   0  $accept : %entry% $end

   1  debut : clist EOF

   2  clist : singlecomm clist
   3        | singlecomm

   4  singlecomm : cell EQUAL formula
   5             | SHOW cell
   6             | SHOWALL

   7  cell : CELLROW INT

   8  operand : SUM
   9          | MULT
  10          | AVERAGE
  11          | MAX

  12  formula : NBR
  13          | INT
  14          | cell
  15          | operand LPAREN forlist RPAREN

  16  forlist : formula
  17          | formula SEMICOL forlist

  18  %entry% : '\001' debut

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . debut  (18)

	CELLROW  shift 3
	SHOW  shift 4
	SHOWALL  shift 5
	.  error

	debut  goto 6
	clist  goto 7
	singlecomm  goto 8
	cell  goto 9


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	cell : CELLROW . INT  (7)

	INT  shift 10
	.  error


state 4
	singlecomm : SHOW . cell  (5)

	CELLROW  shift 3
	.  error

	cell  goto 11


state 5
	singlecomm : SHOWALL .  (6)

	.  reduce 6


state 6
	%entry% : '\001' debut .  (18)

	.  reduce 18


state 7
	debut : clist . EOF  (1)

	EOF  shift 12
	.  error


state 8
	clist : singlecomm . clist  (2)
	clist : singlecomm .  (3)

	CELLROW  shift 3
	SHOW  shift 4
	SHOWALL  shift 5
	EOF  reduce 3

	clist  goto 13
	singlecomm  goto 8
	cell  goto 9


state 9
	singlecomm : cell . EQUAL formula  (4)

	EQUAL  shift 14
	.  error


state 10
	cell : CELLROW INT .  (7)

	.  reduce 7


state 11
	singlecomm : SHOW cell .  (5)

	.  reduce 5


state 12
	debut : clist EOF .  (1)

	.  reduce 1


state 13
	clist : singlecomm clist .  (2)

	.  reduce 2


state 14
	singlecomm : cell EQUAL . formula  (4)

	INT  shift 15
	NBR  shift 16
	CELLROW  shift 3
	SUM  shift 17
	MULT  shift 18
	AVERAGE  shift 19
	MAX  shift 20
	.  error

	cell  goto 21
	formula  goto 22
	operand  goto 23


state 15
	formula : INT .  (13)

	.  reduce 13


state 16
	formula : NBR .  (12)

	.  reduce 12


state 17
	operand : SUM .  (8)

	.  reduce 8


state 18
	operand : MULT .  (9)

	.  reduce 9


state 19
	operand : AVERAGE .  (10)

	.  reduce 10


state 20
	operand : MAX .  (11)

	.  reduce 11


state 21
	formula : cell .  (14)

	.  reduce 14


state 22
	singlecomm : cell EQUAL formula .  (4)

	.  reduce 4


state 23
	formula : operand . LPAREN forlist RPAREN  (15)

	LPAREN  shift 24
	.  error


state 24
	formula : operand LPAREN . forlist RPAREN  (15)

	INT  shift 15
	NBR  shift 16
	CELLROW  shift 3
	SUM  shift 17
	MULT  shift 18
	AVERAGE  shift 19
	MAX  shift 20
	.  error

	cell  goto 21
	formula  goto 25
	operand  goto 23
	forlist  goto 26


state 25
	forlist : formula .  (16)
	forlist : formula . SEMICOL forlist  (17)

	SEMICOL  shift 27
	RPAREN  reduce 16


state 26
	formula : operand LPAREN forlist . RPAREN  (15)

	RPAREN  shift 28
	.  error


state 27
	forlist : formula SEMICOL . forlist  (17)

	INT  shift 15
	NBR  shift 16
	CELLROW  shift 3
	SUM  shift 17
	MULT  shift 18
	AVERAGE  shift 19
	MAX  shift 20
	.  error

	cell  goto 21
	formula  goto 25
	operand  goto 23
	forlist  goto 29


state 28
	formula : operand LPAREN forlist RPAREN .  (15)

	.  reduce 15


state 29
	forlist : formula SEMICOL forlist .  (17)

	.  reduce 17


18 terminals, 9 nonterminals
19 grammar rules, 30 states
